JSのURLのドメイン変更

--- a/main.css
+++ b/main.css
@@ -3,7 +3,7 @@ body {
 }
 
 ul {
-  list-style-image: url('//spitz2.ra9.jp/assets/pc/images/common/contents-header-menu.png')
+  list-style-image: url('//rev.ra9.jp/assets/pc/images/common/contents-header-menu.png')
 }
 
 dl {
